--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,59 @@
-<h1>Hello</h1>
-<% @posts.each do |post| %>
-  <%= image_tag post.user.photo if post.user.photo.attached? %> <br/>
-  <%= post.user.email.split('@').first %><br/>
-  <%= post.title%>
-  <%= image_tag post.photo %>
-  <%= post.description %>
-<% end %>
+<div>
+      <div class="container mx-auto">
+        <div class="py-16 lg:py-20">
+          <div>
+            <img src="/assets/img/icon-blog.png" alt="icon envelope" />
+          </div>
+
+          <h1 class="pt-5 font-body text-4xl font-semibold text-primary dark:text-white md:text-5xl lg:text-6xl">
+            Blog
+          </h1>
+
+          <div class="pt-3 sm:w-3/4">
+            <p class="font-body text-xl font-light text-primary dark:text-white">
+              Articles, tutorials, snippets, rants, and everything else. Subscribe for
+              updates as they happen.
+            </p>
+          </div>
+
+          <form class="flex flex-col py-12 sm:flex-row">
+            <input type="email" id="subscribe" placeholder="Drop that email here…"
+              class="w-full border border-primary bg-grey-lightest px-5 py-4 font-body font-light text-primary placeholder-primary transition-colors focus:border-secondary focus:outline-none focus:ring-2 focus:ring-secondary dark:border-secondary sm:w-1/2" />
+            <button type="submit"
+              class="mt-5 bg-secondary px-10 py-4 font-body text-xl font-semibold text-white hover:bg-green sm:mt-0 md:text-2xl">
+              Subscribe
+            </button>
+          </form>
+
+          <div class="pt-8 lg:pt-12">
+            
+            <% @posts.each do |post|%>
+              <div class="border-b border-grey-lighter pb-8">
+                <span
+                  class="mb-4 inline-block rounded-full bg-green-light px-2 py-1 font-body text-sm text-green">category</span>
+                <%= link_to post_path(post), class: "block font-body text-lg font-semibold text-primary transition-colors hover:text-green dark:text-white dark:hover:text-secondary" do %>
+                  <%= post.title%>
+                  <% end %>
+                  
+                <div class="flex items-center pt-4">
+                  <p class="pr-2 font-body font-light text-primary dark:text-white">
+                    <%= post.created_at.strftime("%B %d, %Y") %>
+                  </p>
+                  <span class="font-body text-grey dark:text-white">//</span>
+                  <p class="pl-2 font-body font-light text-primary dark:text-white">
+                    4 min read
+                  </p>
+                </div>
+              </div>
+            <%end%>
+            
+          </div>
+</div>
+
+
+
+
+
+
+
+
