--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -8,7 +8,7 @@
             Medium Clone
           </p>
         </a>
-        <div class="flex items-center lg:hidden">
+         <div class="flex items-center lg:hidden">
           <i class="bx mr-8 cursor-pointer text-3xl text-primary dark:text-white" @click="themeSwitch()"
             :class="isDarkMode ? 'bxs-sun' : 'bxs-moon'"></i>
 
@@ -36,8 +36,7 @@
                 <div
                     class="absolute left-0 bottom-0 z-20 h-0 w-full opacity-75 transition-all group-hover:h-2 group-hover:bg-yellow">
                 </div>
-                <a href="/blog"
-                    class="relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary">Blog</a>
+                <%= link_to "Blog", posts_path,class: "relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary"%>
                 </li>
                 <li class="group relative mr-6 mb-1">
                 <div
@@ -59,7 +58,7 @@
                 </div>
                 <%= link_to "Sign Out",destroy_user_session_path, method: :delete, class: "relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary", data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete } %>
                 </li>
-            <%else%>
+               <%else%>
                 <li class="group relative mr-6 mb-1">
                 <div
                     class="absolute left-0 bottom-0 z-20 h-0 w-full opacity-75 transition-all group-hover:h-2 group-hover:bg-yellow">
@@ -108,4 +107,5 @@
 
         </ul>
       </div>
+
 </div>
