--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+
 <div>
     <div class="container mx-auto">
         <div class="pt-16 lg:pt-20">
@@ -24,23 +25,61 @@
             <%= image_tag @post.photo %>
            <p class="text-justify"><%= @post.description %></p>
           </div>
-          <div class="px-5 py-5">
-                <% @post.comments.each do |comment| %>
-                    <div class="px-2">
-                        <p class="mb-5">
-                            <%= comment.user.email.split('@').first %> 
-                            <%= comment.description %>
-                        </p>
-                    </div>
-                <% end %>
-            </div>
-            <%if current_user%>
-                <%= simple_form_for Comment.new, url: post_comments_path(@post), method: :post do |f| %>
-                    <%= f.input :description, label: 'Comment', placeholder: 'Add a comment', label_html: {class: 'mt-4'}, input_html: {class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-50 dark:border-gray-600 dark:placeholder-gray-500 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500"} %>
-                    <%= f.submit 'Post', class: 'text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800' %>
-                <% end %>
-            <%end%>
+          <%# likes %>
+        <div class="flex items-center">
+          <div>
+          <% if current_user && @post.likes.where(user_id: current_user.id).empty? %>
+            <%= button_to "Like", post_likes_path(@post), method: :post,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"%>
+          <% else %>
+            <% like = @post.likes.find_by(user_id: current_user.id) %>
+            <%= button_to "Unlike", post_like_path(@post, like), method: :delete,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+          <% end %>
+          <p><%= pluralize @post.likes.count, "like" %></p>
         </div>
+          <%# bookmark %>
+        <div>
+          <% if current_user && @post.bookmarks.where(user_id: current_user.id).empty? %>
+            <%= button_to "Bookmark", post_bookmarks_path(@post), method: :post,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"%>
+          <% else %>
+            <% bookmark = @post.bookmarks.find_by(user_id: current_user.id) %>
+            <%= button_to "Unmark",post_bookmark_path(@post, bookmark), method: :delete,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+          <% end %>
+          <p><%= pluralize @post.bookmarks.count, "bookmark" %></p>
+        </div>
+        
+      </div>
+      
+      <% @post.likes.each do |like| %>
+           <%= like.user.email %><br/>
+      <%end%>
+
+      <% @post.bookmarks.each do |bookmark|%>
+         <%= bookmark.user.email %> <br/>
+      <%end%>
+
+      <div class="px-5 py-5">
+        <% @post.comments.each do |comment| %>
+          <div class="px-2">
+            <p class="mb-5">
+              <%= comment.user.email.split('@').first %> 
+              <%= comment.description %>
+            </p>
+            <%if comment.user == current_user%>
+              <%= link_to 'Edit |', edit_post_comment_path(post_id: @post.id, id: comment.id) %>
+            <%end%>
+            <% if comment.user == current_user || @post.user == current_user %>
+              <%= link_to 'Delete', post_comment_path(post_id: @post.id, id: comment.id), method: :delete,data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete }%>
+            <%end%>
+          </div>
+        <% end %>
+      </div>
+      <%if current_user%>
+        <%= simple_form_for Comment.new, url: post_comments_path(@post), method: :post do |f| %>
+          <%= f.input :description, label: 'Comment', placeholder: 'Add a comment', label_html: {class: 'mt-4'}, input_html: {class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-md focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-50 dark:border-gray-600 dark:placeholder-gray-500 dark:text-black dark:focus:ring-blue-500 dark:focus:border-blue-500"} %>
+          <%= f.submit 'Post' %>
+        <% end %>
+      <%end%>
+    </div>
     </div>
 </div>
 
