--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -58,6 +58,41 @@
                 </div>
                 <%= link_to "Sign Out",destroy_user_session_path, method: :delete, class: "relative z-30 block px-2 font-body text-lg font-medium text-primary transition-colors group-hover:text-green dark:text-white dark:group-hover:text-secondary", data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete } %>
                 </li>
+
+                <button data-modal-target="default-modalbook" data-modal-toggle="default-modalbook" type="button">
+            Bookmark
+          </button>
+        </div>
+        <div id="default-modalbook" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+          <div class="relative p-4 w-full max-h-full">
+            <!-- Modal content -->
+            <div class="relative bg-black rounded-lg shadow dark:bg-gray-700 w-2/6 h-4/6">
+              <!-- Modal header -->
+              <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                <h3 class="text-xl font-semibold text-white text-white">
+                  <!-- Changed text color to white -->
+                  Bookmark
+                </h3>
+                <button type="button" class="text-white bg-transparent hover:bg-gray-200 hover:text-white rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="default-modalbook">
+                  <i class="fa-solid fa-xmark"></i>
+                </button>
+              </div>
+              <!-- Modal body -->
+              <% if @post.present? %>
+                <div class="p-4 md:p-5 space-y-4">
+                  <div class="text-white">
+                    <% @post.bookmarks.each do |book| %>
+                      <% if current_user.id == book.user_id %>
+                        <%= book.post.title %></br>
+                      <% end %>
+                    <% end %>
+                  </div>
+                </div>
+              <% end %>
+
+            </div>
+          </div>
+        </div>
                <%else%>
                 <li class="group relative mr-6 mb-1">
                 <div
