--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,3 @@
-
 <div>
     <div class="container mx-auto">
         <div class="pt-16 lg:pt-20">
@@ -28,40 +27,54 @@
           <%# likes %>
         <div class="flex items-center">
           <div>
-          <% if current_user && @post.likes.where(user_id: current_user.id).empty? %>
-            <%= button_to "Like", post_likes_path(@post), method: :post,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"%>
-          <% else %>
-            <% like = @post.likes.find_by(user_id: current_user.id) %>
-            <%= button_to "Unlike", post_like_path(@post, like), method: :delete,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
-          <% end %>
-          <p><%= pluralize @post.likes.count, "like" %></p>
-        </div>
-          <%# bookmark %>
-        <div>
-          <% if current_user && @post.bookmarks.where(user_id: current_user.id).empty? %>
-            <%= button_to "Bookmark", post_bookmarks_path(@post), method: :post,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"%>
-          <% else %>
-            <% bookmark = @post.bookmarks.find_by(user_id: current_user.id) %>
-            <%= button_to "Unmark",post_bookmark_path(@post, bookmark), method: :delete,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
-          <% end %>
-          <p><%= pluralize @post.bookmarks.count, "bookmark" %></p>
-        </div>
+            <% if current_user && @post.likes.where(user_id: current_user.id).empty? %>
+              <%= button_to "Like", post_likes_path(@post), method: :post,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"%>
+            <% else %>
+              <% like = @post.likes.find_by(user_id: current_user.id) %>
+              <%= button_to "Unlike", post_like_path(@post, like), method: :delete,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+            <% end %>
+            <button data-modal-target="default-modal" data-modal-toggle="default-modal",type="button">
+              <%= pluralize @post.likes.count, "like" %>
+            </button>
+            <div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+              <div class="relative p-4 w-80 max-w-2xl max-h-full">
+                <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                  <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                      <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Likes</h3>
+                      <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="default-modal">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                      </button>
+                    </div>
+                    <div class="text-white px-2">
+                      <% @post.likes.each do |like| %>
+                            <%= like.user.email %><br/>
+                      <%end%>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
         
+          <%# bookmark %>
+          <div>
+            <% if current_user && @post.bookmarks.where(user_id: current_user.id).empty? %>
+              <%= button_to "Bookmark", post_bookmarks_path(@post), method: :post,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"%>
+            <% else %>
+              <% bookmark = @post.bookmarks.find_by(user_id: current_user.id) %>
+              <%= button_to "Unmark",post_bookmark_path(@post, bookmark), method: :delete,class:"text-black bg-black-700 hover:bg-black-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800" %>
+            <% end %>
+          </div>
+        </div>
       </div>
-      
-      <% @post.likes.each do |like| %>
-           <%= like.user.email %><br/>
-      <%end%>
-
-      <% @post.bookmarks.each do |bookmark|%>
-         <%= bookmark.user.email %> <br/>
-      <%end%>
-
+      <%# comment %>
       <div class="px-5 py-5">
         <% @post.comments.each do |comment| %>
           <div class="px-2">
             <p class="mb-5">
-              <%= comment.user.email.split('@').first %> 
+              <strong><%= comment.user.email.split('@').first %> </strong>
               <%= comment.description %>
             </p>
             <%if comment.user == current_user%>
